[gd_scene load_steps=8 format=2]

[ext_resource path="res://obstacles/crab/crab_sheet.png" type="Texture" id=1]
[ext_resource path="res://obstacles/crab/crab.gd" type="Script" id=2]
[ext_resource path="res://obstacles/stunner.tscn" type="PackedScene" id=3]
[ext_resource path="res://obstacles/crab/sfx_crab-jump.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 2 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 4 )

[node name="Crab" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
jumpHeight = 150

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="RayCastHolder" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCastHolder"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Stunner" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Stunner" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="SFXJump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
pitch_scale = 1.1
max_distance = 150.0

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]

[editable path="Stunner"]
